@@ -1,5 +1,6 @@
 Version 1.1.0-CVS (?? ??? 2005)
   - Fixed the following bug reports on SourceForge:
+      1353363: publish.php logic error for public user?
       1351971: "Delete"-Button won't work properly for reports
       1277803: new untimed events - aren't
       1346660: new entry: time check not informed correctly ->misspelling
@@ -87,6 +88,7 @@ Version 1.1.0-CVS (?? ??? 2005)
         user preferences for displaying unapproved.
       1205151: use of undefined variable in edit_entry.php
   - Other bugs fixed:
+    - Corrected content type in publish.php and freebusy.php
     - Applied PATCH 1297654: eliminate deprecated tags, excluding <b></b>
     - Applied PATCH 1349875: Fix for WebCalendar.class
     - Numerous tweaks to RRULE parsing for display of repeating events
